--- a/index.html
+++ b/index.html
@@ -43,26 +43,14 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-left">
 		  <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Datasets <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Data Analysis <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                         	<li><a href="/data_final/tableau">Tableau</a></li>
-                        	<li><a href="/iso" target="_blank">ISO JSON</a></li>
-                        	<li><a href="/country" target="_blank">Country JSON</a></li>
-                        	<li><a href="/metadata" target="_blank">Meta Data JSON</a></li>
-                        	<li><a href="/homicides_per_100k" target="_blank">Homicides JSON</a></li>
-                        	<li><a href="/hdi" target="_blank">HDI JSON</a></li>
-                        	<li><a href="/gdp_mean" target="_blank">Mean GDP JSON</a></li>
+                        	<li><a href="/data_final/rkmeans" target="_blank">R K-Means</a></li>
                         </ul>
                       </li>
                       <li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Comparison Charts<b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li><a href="/comparisons">Quality of Life</a></li>
-							<li><a href="/ginigdp">Gini and GDP v Homicides</a></li>
-						</ul>
-			</li>
-			<li><a href="/table" target="_blank">Data Table</a></li>
-		  <li><a href="https://github.com/irakliintskirveli/Final_Project" target="_blank">GitHub</a></li>
+		  <li><a href="https://github.com/geoff567/data_final" target="_blank">GitHub</a></li>
         </ul>
       </div>
     </div>
