--- a/tableau.html
+++ b/tableau.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
-    <title>Final Project2</title>
+    <title>Tableau</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <link rel="stylesheet" href="style2.css">
@@ -44,7 +44,7 @@
                               
                     </li>
                     <li><a href="/table" target="_blank">Data Table</a></li>
-                  <li><a href="https://github.com/ucidatabootcamp-7/UCI-Project-02" target="_blank">GitHub</a></li>
+                  <li><a href="https://github.com/geoff567/data_final" target="_blank">GitHub</a></li>
                 </ul>
               </div>
             </div>
@@ -56,7 +56,7 @@
 
 <body>            
     <div class="container"">                
-            <div class="row">
+            <div class="row" style="padding-top: 5px;">
                     <div class="col-xs-12  col-md-12">
                         <div class="iframeContainer">
                             <div class='tableauPlaceholder' id='viz1524188723540' style='position: relative'><noscript>
