--- a/tableau.html
+++ b/tableau.html
@@ -1,56 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
-    <title>Tableau</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="style2.css">
+  <meta charset="utf-8">
+  <title>SF Bike Sharing Data</title>
+  
+  <!-- Our CSS -->
+  <link rel="stylesheet" type="text/css" href="../static/css/style.css"/>
+  
+  <!-- Bootstrap css -->
 
-    <!-- NAV BAR HERE -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  
+  <!-- NAV BAR HERE -->
 	
 	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container-fluid">
-              <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-                <!-- INSERT LOGO IMAGE HERE
-                <a class="navbar-brand" href="../">
-                  <span class="glyphicon glyphicon-chevron-left"></span>
-                </a>-->
-                <a href="/" class="navbar-brand">World Economic Data</a>
-              </div>
-              <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-left">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Data Plots <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="Tableau" target="_blank">GINI JSON</a></li>
-                                <li><a href="/iso" target="_blank">ISO JSON</a></li>
-                                <li><a href="/country" target="_blank">Country JSON</a></li>
-                                <li><a href="/metadata" target="_blank">Meta Data JSON</a></li>
-                                <li><a href="/homicides_per_100k" target="_blank">Homicides JSON</a></li>
-                                <li><a href="/hdi" target="_blank">HDI JSON</a></li>
-                                <li><a href="/gdp_mean" target="_blank">Mean GDP JSON</a></li>
-                            </ul>
-                    </li>
-                              
-                    </li>
-                    <li><a href="/table" target="_blank">Data Table</a></li>
-                  <li><a href="https://github.com/geoff567/data_final" target="_blank">GitHub</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-            
-        <!-- END OF NAVBAR -->
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <!-- INSERT LOGO IMAGE HERE
+		<a class="navbar-brand" href="../">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>-->
+        <a href="/" class="navbar-brand">SF Bike Sharing Analysis</a>
+      </div>
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-left">
+		  <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Data Analysis <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                        	<li><a href="/data_final/tableau">Tableau</a></li>
+                        	<li><a href="/data_final/rkmeans" target="_blank">R K-Means</a></li>
+                        </ul>
+                      </li>
+                      <li class="dropdown">
+		  <li><a href="https://github.com/geoff567/data_final" target="_blank">GitHub</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+	
+<!-- END OF NAVBAR -->
 
 </head>
 
