--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<a class="navbar-brand" href="../">
           <span class="glyphicon glyphicon-chevron-left"></span>
         </a>-->
-        <a href="/" class="navbar-brand">SF Bike Sharing Analysis</a>
+        <a href="/data_final/index" class="navbar-brand">SF Bike Sharing Analysis</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-left">
