--- a/index.html
+++ b/index.html
@@ -24,23 +24,20 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <!-- INSERT LOGO IMAGE HERE
-		<a class="navbar-brand" href="../">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>-->
+
         <a href="/data_final/index" class="navbar-brand">SF Bike Sharing Analysis</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-left">
-		  <li class="dropdown">
+		  		<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Data Analysis <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                         	<li><a href="/data_final/tableau">Tableau</a></li>
-                        	<li><a href="/data_final/rkmeans" target="_blank">R K-Means</a></li>
+                        	<li><a href="/data_final/rkmeans">R K-Means</a></li>
                         </ul>
                       </li>
                       <li class="dropdown">
-		  <li><a href="https://github.com/geoff567/data_final" target="_blank">GitHub</a></li>
+		  		<li><a href="https://github.com/geoff567/data_final" target="_blank">GitHub</a></li>
         </ul>
       </div>
     </div>
@@ -49,7 +46,7 @@
 <!-- END OF NAVBAR -->
 	
 </head>
-<body style="background-color:#1a1a1a">
+<body style="background-color:#adadad">
 	<!-- Map Element 
 	================================================= -->
 	<div class="map-container">  
