--- a/rkmeans.html
+++ b/rkmeans.html
@@ -36,7 +36,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Data Analysis <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                         	<li><a href="/data_final/tableau">Tableau</a></li>
-                        	<li><a href="/data_final/rkmeans" target="_blank">R K-Means</a></li>
+                        	<li><a href="/data_final/rkmeans">R K-Means</a></li>
                         </ul>
                       </li>
                       <li class="dropdown">
