--- a/tableau.html
+++ b/tableau.html
@@ -47,7 +47,12 @@
 </head>
 
 <body>            
-    <div class="container"">                
+  <div class="row">
+    <div class="col-xs-12 col-md-12">
+      <h1>Tableau</h1>
+    </div>
+  </div>  
+  <div class="container"">                
             <div class="row" style="padding-top: 5px;">
                     <div class="col-xs-12  col-md-12">
                         <div class="iframeContainer">
@@ -74,7 +79,7 @@
                         </div>
                     </div>
             </div>       
-
+  </div>          
 </body>
 
 </html>
