--- a/tableau.html
+++ b/tableau.html
@@ -48,7 +48,7 @@
 
 <body>            
   <div class="container"">
-            <div class="row">
+            <div class="row" style="padding-top: 40px;">
                 <div class="col-xs-12 col-md-12">
                   <h1>Tableau</h1>
                 </div>
