--- a/rkmeans.html
+++ b/rkmeans.html
@@ -52,6 +52,18 @@
 
 <body>            
     <div class="container"">                
+            <div class="row" style="padding-top: 40px;">
+                    <div class="col-xs-12 col-md-9">
+                      <h1>K-Means Clustering in R </h1>
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
+                        anim id est laborum.
+                      </p>
+                    </div>
+            </div>       
             <div class="row" style="padding-top: 5px;">
                     <div class="col-xs-12  col-md-12">
                         <div class="iframeContainer">
