--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>SF Bike Sharing Data</title>
 	
 	<!-- Our CSS -->
-	<link rel="stylesheet" type="text/css" href="../data_final/style.css"/>
+	<link rel="stylesheet" type="text/css" href="/data_final/style.css"/>
 	
 	<!-- Bootstrap css -->
 	
