--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <!-- END OF NAVBAR -->
 	
 </head>
-<body style="background-color:#ffffff">
+<body style="background-color:lightblue">
 	<!-- Map Element 
 	================================================= -->
 	<div class="map-container">  
