--- a/rkmeans.html
+++ b/rkmeans.html
@@ -50,7 +50,7 @@
 
 </head>
 
-<body>            
+<body style="background-color:lightblue">            
     <div class="container"">                
             <div class="row" style="padding-top: 40px;">
                     <div class="col-xs-12 col-md-9">
