--- a/tableau.html
+++ b/tableau.html
@@ -46,7 +46,7 @@
         
 </head>
 
-<body>            
+<body style="background-color:lightblue">            
   <div class="container"">
             <div class="row" style="padding-top: 40px;">
                 <div class="col-xs-12 col-md-9">
