--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <body style="background-color:lightblue">
 	
-		<div class="container-fluid">
+		<div class="container-fluid" style="padding-top: 40px">
       <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-7">
@@ -57,7 +57,7 @@
               <div class="panel-body">
                 <h2>SF Bike Sharing Analysis</h2>
                 <hr>
-                <img class = "img-responsive" src="images/bkshare.jpg" style="width:60%; float: left; margin: 5px;" alt="first image" >
+                <img class = "img-responsive" src="images/bkshare.jpg" style="width:90%; margin: 5px;" alt="first image" >
 
               </div>
             </div>
