--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="panel panel-default">
                 <div class="panel-body">
                     
-                  <h2>Visualizations</h2>
+                  <h2>Group Members</h2>
                   <hr>
                   <div class="row" style = "padding-bottom: 10px">
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="temperature.html"><img class = "img img-responsive" src="images/temperature.png" style="width:100%" alt=""></a></div>
