--- a/index.html
+++ b/index.html
@@ -70,14 +70,10 @@
                     
                   <h2>Group Members</h2>
                   <hr>
-                  <div class="row" style = "padding-bottom: 10px">
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="temperature.html"><img class = "img img-responsive" src="images/temperature.png" style="width:100%" alt=""></a></div>
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="humidity.html"><img class = "img img-responsive" src="images/humidity.png" style="width:100%" alt=""></a></div>
-                  </div>
-                  <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="cloudiness.html"><img class = "img img-responsive" src="images/cloudiness.png" style="width:100%" alt=""></a></div>
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="windspeed.html"><img class = "img img-responsive" src="images/windspeed.png" style="width:100%" alt=""></a></div>
-                  </div>
+									<h4>Marsalis Paige</h4>
+									<h4>Tony Fernandez</h4>
+									<h4>Irakli Intskiirveli</h4>
+									<h4>Geoffrey Booker</h4>
               
               </div>
 
