--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="panel panel-default">
                 <div class="panel-body">
                     
-                  <h2>Group Members</h2>
+                  <h2 style="float: left">Group Members</h2>
                   <hr>
 									<h4>Marsalis Paige</h4>
 									<h4>Tony Fernandez</h4>
