--- a/rkmeans.html
+++ b/rkmeans.html
@@ -67,7 +67,7 @@
             <div class="row" style="padding-top: 5px;">
                     <div class="col-xs-12  col-md-12">
                       <hr>
-                      <img class = "img-responsive" src="images/heatmap.png" style="width:60%; float: left; margin: 5px;" alt="first image" > 
+                      <img class = "img-responsive" src="images/bkshare.jpg.png" style="width:60%; float: center; margin: 5px;" alt="elbow" > 
                     </div>
             </div>       
 
