--- a/rkmeans.html
+++ b/rkmeans.html
@@ -65,9 +65,9 @@
                     </div>
             </div>       
             <div class="row" style="padding-top: 5px;">
-                    <div class="col-xs-12  col-md-12">
+                    <div class="panel-body">
                       <hr>
-                      <img class = "img-responsive" src="images/bkshare.jpg.png" style="width:60%; float: center; margin: 5px;" alt="elbow" > 
+                      <img class = "img-responsive" src="images/bkshare.jpg.png" style="width:60%; float: center; margin: 5px;"> 
                     </div>
             </div>       
 
