--- a/rkmeans.html
+++ b/rkmeans.html
@@ -73,7 +73,7 @@
                       <div class="panel-body">
                         <h2>SF Bike Sharing Analysis</h2>
                         <hr>
-                        <img class = "img-responsive" src="images/bkshare.jpg" style="width:100%; float: center; margin: 5px;" alt="first image" >
+                        <img class = "img-responsive" src="images/elbow.png" style="width:100%; float: center; margin: 5px;" alt="first image" >
         
                       </div>
                     </div>
