--- a/rkmeans.html
+++ b/rkmeans.html
@@ -74,6 +74,7 @@
                         <h2>Elbow Method</h2>
                         <hr>
                         <img class = "img-responsive" src="images/elbow.png" style="width:100%; float: center; margin: 5px;" alt="elbow" >
+                        <h2 style="padding: 20px">K-Means Clusters</h2>
                         <img class = "img-responsive" src="images/kmeans.png" style="width:100%; float: center; padding: 20px; margin: 5px;" alt="kmeans" >
                       </div>
                     </div>
