--- a/rkmeans.html
+++ b/rkmeans.html
@@ -56,11 +56,10 @@
                     <div class="col-xs-12 col-md-9">
                       <h1>K-Means Clustering in R</h1>
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
-                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
-                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
-                        anim id est laborum.
+                          Elbow Method used to determine number of clusters in a K-Means Clustering model and examined 
+                          Duration vs. Distance. Based on elbow graph we chose to use three clusters. Based on the plotted 
+                          cluster, k-means might not have been the optimal algorithm to use. Going forward, decision tree 
+                          would probably be a better fit.                      
                       </p>
                     </div>
             </div>       
